[gd_scene load_steps=15 format=2]

[ext_resource path="res://clouds/v2/CloudNoiseCreationV2.gd" type="Script" id=1]
[ext_resource path="res://addons/maujoe.camera_control/scripts/camera_control.gd" type="Script" id=2]
[ext_resource path="res://clouds/v2/CloudVolumeRendererSpatial.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/fonts/gill-sans-mt.otf" type="DynamicFontData" id=4]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="QuadMesh" id=8]
size = Vector2( 2, 2 )

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 3 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="Image" id=78]
data = {
"data": PoolByteArray( 197, 255, 255, 255, 190, 255, 255, 255, 180, 255, 255, 255, 174, 255, 255, 255, 172, 255, 255, 255, 179, 255, 255, 255, 194, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 220, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 225, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 193, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 195, 255, 255, 255, 197, 255, 255, 255, 199, 255, 255, 255, 185, 255, 255, 255, 184, 255, 255, 255, 187, 255, 255, 255, 187, 255, 255, 255, 185, 255, 255, 255, 181, 255, 255, 255, 197, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 220, 255, 255, 255, 223, 255, 255, 255, 220, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 187, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 216, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 188, 255, 255, 255, 187, 255, 255, 255, 197, 255, 255, 255, 202, 255, 255, 255, 202, 255, 255, 255, 197, 255, 255, 255, 194, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 213, 255, 255, 255, 211, 255, 255, 255, 209, 255, 255, 255, 216, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 194, 255, 255, 255, 187, 255, 255, 255, 191, 255, 255, 255, 202, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 225, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 214, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 201, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 212, 255, 255, 255, 210, 255, 255, 255, 205, 255, 255, 255, 199, 255, 255, 255, 192, 255, 255, 255, 187, 255, 255, 255, 192, 255, 255, 255, 201, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 230, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 223, 255, 255, 255, 214, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 211, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 192, 255, 255, 255, 192, 255, 255, 255, 196, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 220, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 199, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 202, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 220, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 187, 255, 255, 255, 187, 255, 255, 255, 193, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 202, 255, 255, 255, 194, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 225, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 202, 255, 255, 255, 185, 255, 255, 255, 192, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 187, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 220, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 192, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 202, 255, 255, 255, 192, 255, 255, 255, 192, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 196, 255, 255, 255, 192, 255, 255, 255, 192, 255, 255, 255, 199, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 199, 255, 255, 255, 198, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 209, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 192, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 199, 255, 255, 255, 188, 255, 255, 255, 197, 255, 255, 255, 202, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 193, 255, 255, 255, 192, 255, 255, 255, 197, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 195, 255, 255, 255, 201, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 192, 255, 255, 255, 188, 255, 255, 255, 202, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 202, 255, 255, 255, 192, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 197, 255, 255, 255, 196, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 194, 255, 255, 255, 187, 255, 255, 255, 193, 255, 255, 255, 202, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 199, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 197, 255, 255, 255, 205, 255, 255, 255, 211, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 195, 255, 255, 255, 202, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 202, 255, 255, 255, 208, 255, 255, 255, 212, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 201, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 214, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 202, 255, 255, 255, 207, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 197, 255, 255, 255, 188, 255, 255, 255, 192, 255, 255, 255, 199, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 192, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 223, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 219, 255, 255, 255, 227, 255, 255, 255, 227, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 209, 255, 255, 255, 204, 255, 255, 255, 193, 255, 255, 255, 180, 255, 255, 255, 178, 255, 255, 255, 183, 255, 255, 255, 185, 255, 255, 255, 183, 255, 255, 255, 178, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 202, 255, 255, 255, 202, 255, 255, 255, 207, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 179, 255, 255, 255, 183, 255, 255, 255, 185, 255, 255, 255, 183, 255, 255, 255, 177, 255, 255, 255, 169, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 201, 255, 255, 255, 209, 255, 255, 255, 216, 255, 255, 255, 217, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 197, 255, 255, 255, 192, 255, 255, 255, 199, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 192, 255, 255, 255, 181, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 201, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 220, 255, 255, 255, 213, 255, 255, 255, 202, 255, 255, 255, 202, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 201, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 192, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 200, 255, 255, 255, 187, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 194, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 194, 255, 255, 255, 191, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 185, 255, 255, 255, 181, 255, 255, 255, 182, 255, 255, 255, 194, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 184, 255, 255, 255, 185, 255, 255, 255, 184, 255, 255, 255, 180, 255, 255, 255, 183, 255, 255, 255, 183, 255, 255, 255, 181, 255, 255, 255, 191, 255, 255, 255, 198, 255, 255, 255, 201, 255, 255, 255, 198, 255, 255, 255, 191, 255, 255, 255, 202, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 202, 255, 255, 255, 185, 255, 255, 255, 169, 255, 255, 255, 174, 255, 255, 255, 187, 255, 255, 255, 200, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 197, 255, 255, 255, 181, 255, 255, 255, 179, 255, 255, 255, 181, 255, 255, 255, 181, 255, 255, 255, 183, 255, 255, 255, 185, 255, 255, 255, 187, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 202, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 202, 255, 255, 255, 183, 255, 255, 255, 176, 255, 255, 255, 183, 255, 255, 255, 187, 255, 255, 255, 194, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 181, 255, 255, 255, 187, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 199, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 178, 255, 255, 255, 187, 255, 255, 255, 197, 255, 255, 255, 202, 255, 255, 255, 202, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 187, 255, 255, 255, 187, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 197, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 192, 255, 255, 255, 187, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 214, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 197, 255, 255, 255, 194, 255, 255, 255, 187, 255, 255, 255, 182, 255, 255, 255, 194, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 205, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 197, 255, 255, 255, 187, 255, 255, 255, 194, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 223, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 192, 255, 255, 255, 183, 255, 255, 255, 185, 255, 255, 255, 185, 255, 255, 255, 197, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 187, 255, 255, 255, 190, 255, 255, 255, 200, 255, 255, 255, 205, 255, 255, 255, 205, 255, 255, 255, 200, 255, 255, 255, 190, 255, 255, 255, 197, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 193, 255, 255, 255, 199, 255, 255, 255, 202, 255, 255, 255, 202, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 212, 255, 255, 255, 208, 255, 255, 255, 202, 255, 255, 255, 192, 255, 255, 255, 187, 255, 255, 255, 187, 255, 255, 255, 197, 255, 255, 255, 205, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 198, 255, 255, 255, 198, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 205, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 205, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 214, 255, 255, 255, 218, 255, 255, 255, 214, 255, 255, 255, 208, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 200, 255, 255, 255, 197, 255, 255, 255, 199, 255, 255, 255, 197, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 212, 255, 255, 255, 210, 255, 255, 255, 206, 255, 255, 255, 205, 255, 255, 255, 200, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 200, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 197, 255, 255, 255, 202, 255, 255, 255, 208, 255, 255, 255, 211, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 197, 255, 255, 255, 200, 255, 255, 255, 205, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 197, 255, 255, 255, 205, 255, 255, 255, 210, 255, 255, 255, 213, 255, 255, 255, 210, 255, 255, 255, 208, 255, 255, 255, 199, 255, 255, 255, 194, 255, 255, 255, 197, 255, 255, 255, 194, 255, 255, 255, 189, 255, 255, 255, 202, 255, 255, 255, 218, 255, 255, 255, 234, 255, 255, 255, 246, 255, 255, 255, 246, 255, 255, 255, 234, 255, 255, 255, 218, 255, 255, 255, 202, 255, 255, 255, 194, 255, 255, 255, 208, 255, 255, 255, 219, 255, 255, 255, 223, 255, 255, 255, 219, 255, 255, 255, 208, 255, 255, 255, 194, 255, 255, 255, 199, 255, 255, 255, 208, 255, 255, 255, 212, 255, 255, 255, 208, 255, 255, 255, 199, 255, 255, 255, 198, 255, 255, 255, 206, 255, 255, 255, 210, 255, 255, 255, 212, 255, 255, 255, 205, 255, 255, 255, 197, 255, 255, 255, 185, 255, 255, 255, 181, 255, 255, 255, 180, 255, 255, 255, 183, 255, 255, 255, 199, 255, 255, 255, 214, 255, 255, 255, 227, 255, 255, 255, 234, 255, 255, 255, 234, 255, 255, 255, 227, 255, 255, 255, 214, 255, 255, 255, 199, 255, 255, 255, 197, 255, 255, 255, 211, 255, 255, 255, 223, 255, 255, 255, 229, 255, 255, 255, 223, 255, 255, 255, 211, 255, 255, 255, 197, 255, 255, 255, 197, 255, 255, 255, 205, 255, 255, 255, 208, 255, 255, 255, 205, 255, 255, 255, 197, 255, 255, 255, 191, 255, 255, 255, 198, 255, 255, 255, 205, 255, 255, 255, 208, 255, 255, 255 ),
"format": "RGBA8",
"height": 30,
"mipmaps": false,
"width": 30
}

[sub_resource type="ImageTexture" id=79]
image = SubResource( 78 )
size = Vector2( 30, 30 )

[sub_resource type="DynamicFont" id=45]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=77]
size = 25
font_data = ExtResource( 4 )

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0690393, 2.68748, 5.6578 )
fov = 90.0
size = 7.47502
script = ExtResource( 2 )
max_speed = Vector3( 4, 4, 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.43577, 0.718483, -0.542113, -0.0508906, 0.621014, 0.782146, 0.898618, -0.313248, 0.307183, -4.53003, 2.29896, 0 )
light_color = Color( 0.490196, 0.509804, 0.592157, 1 )
shadow_enabled = true

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 0.771991, 0, -0.635634, 0, 1, 0, 0.635634, 0, 0.771991, 2.45191, 1.03751, 1.92876 )

[node name="CSGBox" type="CSGBox" parent="CSGBox"]
transform = Transform( 0.771991, 0, -0.635634, 0, 1, 0, 0.635634, 0, 0.771991, -2.30505, 0.659522, -2.47719 )

[node name="Plane" type="MeshInstance" parent="."]
transform = Transform( 5.43932, 0, 0, 0, 1, 0, 0, 0, 5.43932, 0.379786, 0, -0.477826 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CloudNoiseCreator" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.037632, -4.76837e-07, 0.172269 )
script = ExtResource( 1 )
RUN_IN_EDITOR = true
IMAGE_SIZE_PIXELS = 30
SLICE = 0.265
PERSISTENCE = 0.0
R_POINTS_PER_AXIS = 6
R_INTENSITY_MULTIPLIER = 2.0
G_POINTS_PER_AXIS = 6
G_INTENSITY_MULTIPLIER = 0.0
B_POINTS_PER_AXIS = 8
B_INTENSITY_MULTIPLIER = 0.0
SLICE_MODE = true

[node name="ShaderQuad" type="MeshInstance" parent="CloudNoiseCreator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0690393, 2.68748, 5.6578 )
extra_cull_margin = 16384.0
mesh = SubResource( 8 )
skeleton = NodePath("../../Camera")
material/0 = SubResource( 11 )

[node name="CloudVolume" type="MeshInstance" parent="CloudNoiseCreator"]
transform = Transform( 3.21291, 0, 0, 0, 1, 0, 0, 0, 3.27667, 0, 2, -1.07974 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="DebugUI" type="Control" parent="CloudNoiseCreator"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureVisualizer" type="TextureRect" parent="CloudNoiseCreator/DebugUI"]
margin_right = 130.0
margin_bottom = 130.0
texture = SubResource( 79 )
expand = true

[node name="TextureInfo" type="Label" parent="CloudNoiseCreator/DebugUI"]
margin_left = 5.0
margin_top = 135.0
margin_right = 187.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 45 )
text = "time = 1.453s"

[node name="Label" type="Label" parent="CloudNoiseCreator/DebugUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 77 )
text = "R - Generate New 3D Texture"
valign = 2
